@@ -160,6 +160,9 @@
 (set-macro-character #\, #'bq-comma-reader nil ytools-readtable*)
 
 (def-excl-dispatch #\` (srm _)
+   (backquote-read srm (\\ (lev read-res) `(bq-backquote ,lev ,read-res))))
+
+(defun backquote-read (srm builder)
   (let ((lev (or (bq-read-lev srm)
 		 (cond ((null bq-levs*) 1)
 		       (t false)))))
@@ -177,7 +180,7 @@
 		  (signal-problem bq-reader
 				  "Unnumbered internal backquote !`" a
 		     (:continue "I'll assign it a number "))))
-	   `(bq-backquote ,lev ,a)))))
+	   (funcall builder lev a)))))
 
 ;;;;(set-dispatch-macro-character #\! #\` #'bq-reader ytools-readtable*)
 
