@@ -1,3 +1,14 @@
+2004-08-09: Change in bq.lisp to allow other files to use its facilities.
+	    Invisible to users.  Changed logic in 'fload' so after asking
+	    whether to compile a previously uncompiled file it doesn't
+	    consider loading old (nonexistent) object code.  (Version 1.4.2)
+	
+2004-08-06: Introduced :|| as prettier synonym for :\|
+	
+2004-08-03: Altered implementation of '!' dispatch macro; change
+            invisible to users.  Another invisible change to
+            subr-synonym (allows specification of numargs).
+	
 2004-07-30: Made ytdoc.pdf part of the CVS system, so it will be part of
             the "nightly snapshot."  (Version 1.4.1)
 	
